--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,16 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
+div {
+    font-family: 'Montserrat', sans-serif;
+}
